crates/biome_js_parser/tests/js_test_suite/error/unterminated_string.jsx
const f = () => (
    <div
        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa="a'
      bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb="b"
    />
  );